[gd_scene load_steps=11 format=2]

[ext_resource path="res://Login/interface/login/Login.gd" type="Script" id=1]
[ext_resource path="res://graphics/backgound-test.jpg" type="Texture" id=2]
[ext_resource path="res://graphics/test2.png" type="Texture" id=3]
[ext_resource path="res://test1.png" type="Texture" id=4]
[ext_resource path="res://Login/interface/fonts/Montserrat-ExtraBold.ttf" type="DynamicFontData" id=5]

[sub_resource type="DynamicFont" id=2]
outline_size = 1
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 5 )

[sub_resource type="DynamicFont" id=3]
outline_size = 1
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 5 )

[sub_resource type="DynamicFont" id=1]
outline_size = 1
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 5 )

[sub_resource type="DynamicFont" id=4]
outline_size = 1
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 5 )

[sub_resource type="DynamicFont" id=5]
size = 12
outline_size = 1
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 5 )

[node name="Login" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="NinePatchRect" type="NinePatchRect" parent="."]
margin_right = 320.0
margin_bottom = 180.0
texture = ExtResource( 2 )

[node name="LoginContainer" type="VBoxContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -130.0
margin_top = -38.0
margin_right = 130.0
margin_bottom = 38.0

[node name="UserContainer" type="HBoxContainer" parent="LoginContainer"]
margin_left = 53.0
margin_right = 207.0
margin_bottom = 24.0
size_flags_horizontal = 4

[node name="UserTitle" type="Label" parent="LoginContainer/UserContainer"]
margin_top = 1.0
margin_right = 92.0
margin_bottom = 22.0
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 2 )
text = "Username:"

[node name="username" type="LineEdit" parent="LoginContainer/UserContainer"]
margin_left = 96.0
margin_right = 154.0
margin_bottom = 24.0
rect_min_size = Vector2( 56, 15 )
size_flags_horizontal = 7
size_flags_vertical = 4

[node name="PassContainer" type="HBoxContainer" parent="LoginContainer"]
margin_left = 54.0
margin_top = 28.0
margin_right = 205.0
margin_bottom = 52.0
size_flags_horizontal = 4

[node name="PassTitle" type="Label" parent="LoginContainer/PassContainer"]
margin_top = 1.0
margin_right = 89.0
margin_bottom = 22.0
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 3 )
text = "Password:"

[node name="password" type="LineEdit" parent="LoginContainer/PassContainer"]
margin_left = 93.0
margin_right = 151.0
margin_bottom = 24.0
size_flags_horizontal = 7

[node name="LoginButton" type="TextureButton" parent="LoginContainer"]
margin_left = 100.0
margin_top = 56.0
margin_right = 160.0
margin_bottom = 76.0
rect_min_size = Vector2( 60, 20 )
size_flags_horizontal = 4
texture_normal = ExtResource( 3 )
texture_pressed = ExtResource( 4 )
texture_disabled = ExtResource( 4 )
expand = true

[node name="Label" type="Label" parent="LoginContainer/LoginButton"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -24.0
margin_top = -10.5
margin_right = 24.0
margin_bottom = 10.5
custom_fonts/font = SubResource( 1 )
text = "Login"
valign = 1

[node name="BackButton" type="TextureButton" parent="LoginContainer"]
margin_left = 100.0
margin_top = 80.0
margin_right = 160.0
margin_bottom = 100.0
rect_min_size = Vector2( 60, 20 )
size_flags_horizontal = 4
texture_normal = ExtResource( 3 )
texture_pressed = ExtResource( 4 )
texture_disabled = ExtResource( 4 )
expand = true

[node name="Label" type="Label" parent="LoginContainer/BackButton"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -24.0
margin_top = -10.5
margin_right = 24.0
margin_bottom = 10.5
custom_fonts/font = SubResource( 1 )
text = "Back"
valign = 1

[node name="Title" type="Label" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -100.0
margin_right = 100.0
margin_bottom = 30.0
custom_fonts/font = SubResource( 4 )
text = "Zachraň Purkiádu"
align = 1
valign = 1

[node name="Notification" type="Label" parent="."]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -160.0
margin_top = -21.0
margin_right = 160.0
custom_fonts/font = SubResource( 5 )
align = 1
valign = 1

[node name="HTTPRequest" type="HTTPRequest" parent="."]

[connection signal="pressed" from="LoginContainer/LoginButton" to="." method="_on_LoginButton_pressed"]
[connection signal="pressed" from="LoginContainer/BackButton" to="." method="_on_BackButton_pressed"]
[connection signal="request_completed" from="HTTPRequest" to="." method="_on_HTTPRequest_request_completed"]
